--- a/templates/server_create.html
+++ b/templates/server_create.html
@@ -34,7 +34,7 @@
               <p><strong>用户名 </strong></p>
               <input type="text" name="username" class="form-control">
               </br>
-              <p><strong>Password </strong></span></p>
+              <p><strong>密码 </strong></span></p>
               <input type="password" name="password" class="form-control">
               </br>
               <p><strong>API 用户名 </strong></p>
