--- a/templates/container_list.html
+++ b/templates/container_list.html
@@ -68,18 +68,18 @@
           
           <!-- Split button -->
           <div class="btn-group">
-            <a type="button" class="btn btn-default btn-sm" href="container_log?host={{container.host}}&host_port={{container.host_port}}&container_id={{container.container_id}}&container_name={{container.name}}" target="_blank">Tail Log</a>
+            <a type="button" class="btn btn-default btn-sm" href="container_log?host={{container.host}}&host_port={{container.host_port}}&container_id={{container.container_id}}&container_name={{container.name}}" target="_blank">查看日志</a>
             <button type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <span class="caret"></span>
             </button>
             {% if request.session.role == "admin" %}
             <ul class="dropdown-menu dropdown-menu-right">
-              <li><a href="javascript:;" onclick="container_opt('{{container.host}}','{{container.host_port}}','{{container.container_id}}','{{container.name}}','restart')">Restart Container</a></li>
+              <li><a href="javascript:;" onclick="container_opt('{{container.host}}','{{container.host_port}}','{{container.container_id}}','{{container.name}}','restart')">重启</a></li>
               <li role="separator" class="divider"></li>
-              <li><a href="javascript:;" onclick="container_opt('{{container.host}}','{{container.host_port}}','{{container.container_id}}','{{container.name}}','start')">Start Container</a></li>
-              <li><a href="javascript:;" onclick="container_opt('{{container.host}}','{{container.host_port}}','{{container.container_id}}','{{container.name}}','stop')">Stop Container</a></li>
+              <li><a href="javascript:;" onclick="container_opt('{{container.host}}','{{container.host_port}}','{{container.container_id}}','{{container.name}}','start')">启动</a></li>
+              <li><a href="javascript:;" onclick="container_opt('{{container.host}}','{{container.host_port}}','{{container.container_id}}','{{container.name}}','stop')">停止</a></li>
               <li role="separator" class="divider"></li>
-              <li><a href="/docker/container_console?host={{container.host}}&host_port={{container.host_port}}&container_id={{container.container_id}}&container_name={{container.name}}" target="_blank">Container Console</a></li>
+              <li><a href="/docker/container_console?host={{container.host}}&host_port={{container.host_port}}&container_id={{container.container_id}}&container_name={{container.name}}" target="_blank">控制台</a></li>
             </ul>
             {% endif %}
           </div>
