--- a/templates/file_server_list.html
+++ b/templates/file_server_list.html
@@ -3,13 +3,13 @@
 {% block body %}
 
 <ol class="breadcrumb">
-  <li>Ops Manager</li>
-  <li class="active">File Server List</li>
+  <li>运维管理</li>
+  <li class="active">文件服务器</li>
 </ol>
 
 <div class="page-header">
     <h2>
-        File Server List
+        文件服务器
     </h2>
 </div>
 
@@ -20,36 +20,36 @@
   <div class="form-group">
     <p class="form-control-static">
         <select class="form-control" name="filter_select">
-          <option {% if filter_select == "Host" or filter_select == "" %} selected="selected" {% endif %}>Host</option>
-          <option {% if filter_select == "Port =" %} selected="selected" {% endif %}>Port =</option>
+          <option {% if filter_select == "Host" or filter_select == "" %} selected="selected" {% endif %}>主机</option>
+          <option {% if filter_select == "Port =" %} selected="selected" {% endif %}>端口 =</option>
         </select>
     </p>
     <input type="text" class="form-control" name="filter_keyword" value="{{filter_keyword}}" placeholder="">
   </div>
-  <button type="submit" class="btn btn-default"><span class="fa fa-filter"></span> Filter</button>
+  <button type="submit" class="btn btn-default"><span class="fa fa-filter"></span> 过滤</button>
   <div class="btn-group">
   <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    More Actions <span class="caret"></span>
+    更多操作 <span class="caret"></span>
   </button>
   <ul class="dropdown-menu dropdown-menu-right">
-    <li><a href="#">Edit</a></li>
-    <li><a style="color: red;" href="#">Delete</a></li>
+    <li><a href="#">编辑</a></li>
+    <li><a style="color: red;" href="#">删除</a></li>
   </ul>
 </div>
 </form>
 </caption>
     <tr>
         <td colspan="12" data-column="0">
-            <span class="table_count">Displaying {{ current_page_size }} / {{ file_server.paginator.count }} items</span>
+            <span class="table_count">显示 {{ current_page_size }} / {{ file_server.paginator.count }} 项目</span>
         </td>
     </tr>
     <tr class="active">
         <th><input type="checkbox" name="check_all" id="check_all" onclick="checkAll()"></th>
-        <th width="15%">Host</th>
-        <th width="10%">Port</th>
-        <th width="20%">File Path Root</th>
-        <th width="40%">Description</th>
-        <th colspan="4" width="15%">Actions</th>
+        <th width="15%">主机</th>
+        <th width="10%">端口</th>
+        <th width="20%">根目录</th>
+        <th width="40%">详情</th>
+        <th colspan="4" width="15%">操作</th>
     </tr>
     {% for server in file_server %}
     <tr>
@@ -62,12 +62,12 @@
           
           <!-- Split button -->
           <div class="btn-group">
-            <a type="button" class="btn btn-default btn-sm" href="/filemanager/directory_list?host={{server.host}}">Open</a>
+            <a type="button" class="btn btn-default btn-sm" href="/filemanager/directory_list?host={{server.host}}">打开</a>
             <button type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <span class="caret"></span>
             </button>
             <ul class="dropdown-menu dropdown-menu-right">
-              <li><a style="color: red;" href="/filemanager/directory_list?host={{server.host}}">Open</a></li>
+              <li><a style="color: red;" href="/filemanager/directory_list?host={{server.host}}">打开</a></li>
             </ul>
           </div>
 
@@ -77,7 +77,7 @@
     {% endfor %}
     <tr>
         <td colspan="12" data-column="0">
-            <span class="table_count">Displaying {{ current_page_size }} / {{ file_server.paginator.count }} items</span>
+            <span class="table_count">显示 {{ current_page_size }} / {{ file_server.paginator.count }} 项目</span>
         </td>
     </tr>
 
