--- a/templates/tail_log.html
+++ b/templates/tail_log.html
@@ -3,12 +3,12 @@
 {% block body %}
 
 <ol class="breadcrumb">
-  <li>Server Action</li>
-  <li class="active">Tail Log</li>
+  <li>服务管理</li>
+  <li class="active">查看日志</li>
 </ol>
 
 <div class="page-header">
-  <h2>Tail Log</h2>
+  <h2>查看日志</h2>
 </div>
 
 
